tests/common/snapshots/rar__common__tests__rar.rs-144-5_file_map.snap
---
source: tests/common/mod.rs
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 97
  name: rar
  confidence: 128
  description: "RAR archive, version: 5, total size: 97 bytes"
  always_display: false
  extraction_declined: false
