tests/common/snapshots/rar__common__tests__rar.rs-16-5_file_map.snap
---
source: tests/common/mod.rs
assertion_line: 68
expression: results.file_map
---
- offset: 0
  id: "[uuid]"
  size: 98
  name: rar
  confidence: 128
  description: "RAR archive, version: 4, total size: 98 bytes"
  always_display: false
  extraction_declined: false
