tests/common/snapshots/rar__common__tests__rar.rs-16-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 98
  success: true
  extractor: rar_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
